# xtcedit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: xdrfile.h  xdrfile_xtc.h
src/: xdrfile.c  xdrfile_c_test.c  xdrfile_xtc.c
